Following changes are done for ppg-15.2 packges.
1. Update versions for PPG 15.2 release.
2. Due to package name change, renamed python3-python-etcd to python3-etcd on RHEL.
3. Updated deb package version from 15.2-1 to 15.2-2.
4. For RHEL8, Enable powertools repo and add mirrors that will work for dnf,yum.
5. Install python3 module patroni[etcd] to fix the patroni service failure.
6. Add PG_TEST_PORT_DIR env variable to PGSM.
7. Removed unrequired python module installation in ppg_meta_server.
8. Install perl modules, CPAN, CPANM and Text::Trim.
9. Set PG_TEST_PORT_DIR dir env variable in python tests file.
10. Change instance_type from t2.micro to t2.medium for PGSM where testcases where fails to allocate memory.
11. Set export LANG=C.UTF-8 for PGSM.
12. Enabling PGSM regression on Centos8 instead of Centos7.

--- a/patroni/ppg-14/tasks/main.yml
+++ b/patroni/ppg-14/tasks/main.yml
@@ -42,7 +42,7 @@
     - percona-postgresql14-server
     - openssl-devel
     - etcd
-    - python3-python-etcd
+    - python3-etcd
     - percona-haproxy
 
 - name: Install patroni RPM
