--- a/tasks/install_ppg11_tools.yml
+++ b/tasks/install_ppg11_tools.yml
@@ -367,7 +367,7 @@
     vars:
       packages:
       - etcd
-      - python3-python-etcd
+      - python3-etcd
     when: ansible_os_family == "RedHat" and ansible_distribution_major_version == "8"
 
   - name: Restart etcd RHEL
@@ -393,7 +393,7 @@
       packages:
       - etcd
       - percona-haproxy
-      - python3-python-etcd
+      - python3-etcd
     when: ansible_os_family == "RedHat"
 
   - name: Restart etcd RHEL
