--- a/tasks/install_ppg12_tools.yml
+++ b/tasks/install_ppg12_tools.yml
@@ -356,7 +356,7 @@
     vars:
       packages:
       - etcd
-      - python3-python-etcd
+      - python3-etcd
       - percona-haproxy
     when: ansible_os_family == "RedHat"
 
