--- a/tasks/install_ppg13_tools.yml
+++ b/tasks/install_ppg13_tools.yml
@@ -347,7 +347,7 @@
       packages:
       - etcd
       - percona-haproxy
-      - python3-python-etcd
+      - python3-etcd
     when: ansible_os_family == "RedHat"
 
   - name: Restart etcd RHEL
