--- a/patroni/ppg-12/tasks/main.yml
+++ b/patroni/ppg-12/tasks/main.yml
@@ -42,7 +42,7 @@
     - percona-postgresql12-server
     - openssl-devel
     - etcd
-    - python3-python-etcd
+    - python3-etcd
     - percona-haproxy
 
 - name: Install patroni RPM
