--- a/playbooks/prepare.yml
+++ b/playbooks/prepare.yml
@@ -184,35 +184,35 @@
           - pandoc
       when: ansible_os_family == "Debian"
 
-    - name: Setup SSH keys RHEL
+    - name: Setup SSH keys CentOS
       authorized_key:
-        user: root
+        user: centos
         key: "{{ lookup('file', 'public_keys') }}"
         state: present
-        exclusive: True
-      with_items:
-        - centos
-        - root
-      when: ansible_os_family == "RedHat"
+        exclusive: False
+      when: ansible_distribution == "CentOS"
+
+    - name: Setup SSH keys for Oracle Linux or Amazon
+      authorized_key:
+        user: ec2-user
+        key: "{{ lookup('file', 'public_keys') }}"
+        state: present
+        exclusive: False
+      when: ansible_distribution == "OracleLinux" or
+            ansible_distribution == "Amazon"
 
     - name: Setup SSH keys Debian
       authorized_key:
-        user: root
+        user: admin
         key: "{{ lookup('file', 'public_keys') }}"
         state: present
-        exclusive: True
-      with_items:
-        - admin
-        - root
+        exclusive: False
       when: ansible_distribution == "Debian"
 
     - name: Setup SSH keys Ubuntu
       authorized_key:
-        user: root
+        user: ubuntu
         key: "{{ lookup('file', 'public_keys') }}"
         state: present
-        exclusive: True
-      with_items:
-        - ubuntu
-        - root
+        exclusive: False
       when: ansible_distribution == "Ubuntu"
