--- a/tasks/install_ppg15.yml
+++ b/tasks/install_ppg15.yml
@@ -10,6 +10,11 @@
     command: dnf clean all -y
     when: ansible_os_family == "RedHat" and ansible_distribution_major_version == "8"
 
+  - name: Enable powertools RHEL8
+    become: true
+    command: dnf config-manager --set-enabled powertools
+    when: ansible_os_family == "RedHat" and ansible_distribution_major_version == "8"
+
   - name: Find all of the files inside /etc/yum.repos.d directory
     find:
       paths: "/etc/yum.repos.d/"
@@ -37,12 +42,7 @@
     command: dnf update -y
     when: ansible_os_family == "RedHat" and ansible_distribution_major_version == "8"
 
-  - name: Enable powertools RHEL8
-    become: true
-    command: dnf config-manager --set-enabled powertools
-    when: ansible_os_family == "RedHat" and ansible_distribution_major_version == "8"
-
-  - name: Disable dnf module for RHEL8
+  - name: Disable dnf postgresql for RHEL8
     become: true
     command: dnf module disable postgresql -y
     when: ansible_os_family == "RedHat" and ansible_distribution_major_version == "8"
