Added a new product pgpool with tests for install, service and version check of package and binary.

--- a/tasks/install_ppg15_tools.yml
+++ b/tasks/install_ppg15_tools.yml
@@ -242,6 +242,28 @@
         - percona-pgbouncer-dbgsym
     when: ansible_os_family == "Debian"
 
+  - name: Install percona-pgpool RHEL
+    yum:
+      name: "{{ packages }}"
+      state: latest
+      update_cache: yes
+    vars:
+      packages:
+        - percona-pgpool-II-pg15
+        - percona-pgpool-II-pg15-extensions
+    when: ansible_os_family == "RedHat"
+
+  - name: Install percona-pgpool Debian
+    apt:
+      name: "{{ packages }}"
+      state: latest
+      update_cache: yes
+    vars:
+      packages:
+        - percona-pgpool2
+        - libpgpool2
+    when: ansible_os_family == "Debian"
+
   - name: Install percona-wal2json15 RHEL
     yum:
       name: percona-wal2json15
@@ -524,6 +546,20 @@
 
   - name: Start haproxy
     shell: haproxy -f  /etc/haproxy/haproxy.cfg -D
+
+  - name: Start pgpool service
+    service:
+      name: pgpool
+      state: started
+      enabled: yes
+    when: ansible_os_family == "RedHat"
+
+  - name: Start pgpool service
+    service:
+      name: percona-pgpool2
+      state: started
+      enabled: yes
+    when: ansible_os_family == "Debian"
 
   - name: Add user postgres to sudoers
     user:
