Following changes are done for ppg-14.7 packges. 1. Update versions for PPG 14.7 release. 2. Due to package name change, renamed python3-python-etcd to python3-etcd on RHEL. 3. Added product pgpool to distribution. 4. For RHEL8, Enable powertools repo and add mirrors that will work for dnf,yum. 5. Install python3 module patroni[etcd] to fix the patroni service failure. 6. Add PG_TEST_PORT_DIR env variable to PGSM. 7. Removed unrequired python module installation in ppg_meta_server. 8. Install perl modules, CPAN, CPANM and Text::Trim. 9. Set PG_TEST_PORT_DIR dir env variable in python tests file. 10. Change instance_type from t2.micro to t2.medium for PGSM where testcases where fails to allocate memory. 11. Set export LANG=C.UTF-8 for PGSM. 12. Enabling PGSM regression on Centos8 instead of Centos7.

--- a/tasks/install_ppg14_tools.yml
+++ b/tasks/install_ppg14_tools.yml
@@ -159,12 +159,16 @@
       update_cache: yes
     when: ansible_os_family == "RedHat"
 
-
   - name: Install patroni RPM
     yum:
       name: percona-patroni
       state: latest
       update_cache: yes
+    when: ansible_os_family == "RedHat"
+
+  - name: Install python3 module - patroni[etcd]
+    become: true
+    command: python3 -m pip install patroni[etcd]
     when: ansible_os_family == "RedHat"
 
   - name: Install patroni debian
@@ -248,6 +252,28 @@
       packages:
         - percona-pgbouncer
         - percona-pgbouncer-dbgsym
+    when: ansible_os_family == "Debian"
+
+  - name: Install percona-pgpool RHEL
+    yum:
+      name: "{{ packages }}"
+      state: latest
+      update_cache: yes
+    vars:
+      packages:
+        - percona-pgpool-II-pg15
+        - percona-pgpool-II-pg15-extensions
+    when: ansible_os_family == "RedHat"
+
+  - name: Install percona-pgpool Debian
+    apt:
+      name: "{{ packages }}"
+      state: latest
+      update_cache: yes
+    vars:
+      packages:
+        - percona-pgpool2
+        - libpgpool2
     when: ansible_os_family == "Debian"
 
   - name: Install percona-wal2json14 RHEL
@@ -532,6 +558,20 @@
 
   - name: Start haproxy
     shell: haproxy -f  /etc/haproxy/haproxy.cfg -D
+
+  - name: Start pgpool service
+    service:
+      name: pgpool
+      state: started
+      enabled: yes
+    when: ansible_os_family == "RedHat"
+
+  - name: Start pgpool service
+    service:
+      name: percona-pgpool2
+      state: started
+      enabled: yes
+    when: ansible_os_family == "Debian"
 
   - name: Add user postgres to sudoers
     user:
