--- a/patroni/ppg-13/tasks/main.yml
+++ b/patroni/ppg-13/tasks/main.yml
@@ -4,6 +4,38 @@
   command: dnf clean all -y
   when: ansible_os_family == "RedHat" and ansible_distribution_major_version == "8"
 
+- name: Find all of the files inside /etc/yum.repos.d directory
+  find:
+    paths: "/etc/yum.repos.d/"
+    patterns: "*.repo"
+  register: repos
+
+- name: Comment 'mirrorlist' in /etc/yum.repos.d/*.repo files
+  replace:
+    path: "{{ item.path }}"
+    regexp: 'mirrorlist'
+    replace: '#mirrorlist'
+  with_items: "{{ repos.files }}"
+  when: ansible_os_family == "RedHat" and ansible_distribution_major_version == "8"
+
+- name: Replace 'baseurl' in /etc/yum.repos.d/*.repo files
+  replace:
+    path: "{{ item.path }}"
+    regexp: '#baseurl=http://mirror.centos.org'
+    replace: 'baseurl=http://vault.centos.org'
+  with_items: "{{ repos.files }}"
+  when: ansible_os_family == "RedHat" and ansible_distribution_major_version == "8"
+
+- name: Update dnf RHEL8
+  become: true
+  command: dnf update -y
+  when: ansible_os_family == "RedHat" and ansible_distribution_major_version == "8"
+
+- name: Enable powertools RHEL8
+  become: true
+  command: dnf config-manager --set-enabled powertools
+  when: ansible_os_family == "RedHat" and ansible_distribution_major_version == "8"
+
 - name: Disable dnf module for RHEL8
   become: true
   command: dnf module disable postgresql -y
@@ -44,13 +76,12 @@
     - etcd
     - python3-etcd
     - percona-haproxy
+    - percona-patroni
 
-- name: Install patroni RPM
-  yum:
-    name: percona-patroni
-    state: latest
-    update_cache: yes
-  when: ansible_os_family == "RedHat"
+- name: Install python3 module - patroni[etcd]
+  become: true
+  command: python3 -m pip install patroni[etcd]
+  when: ansible_os_family == "RedHat" and ansible_distribution_major_version == "8"
 
 - name: Create /etc/patroni directory
   file:
@@ -127,6 +158,11 @@
     name: patroni2
     state: started
     enabled: yes
+
+- name: Remove default haproxy config file
+  ansible.builtin.file:
+    path: /etc/haproxy/haproxy.cfg
+    state: absent
 
 - name: Copy haproxy.cfg
   copy:
