--- a/tasks/install_ppg13_tools.yml
+++ b/tasks/install_ppg13_tools.yml
@@ -147,12 +147,16 @@
       update_cache: yes
     when: ansible_os_family == "RedHat"
 
-
   - name: Install patroni RPM
     yum:
       name: percona-patroni
       state: latest
       update_cache: yes
+    when: ansible_os_family == "RedHat"
+
+  - name: Install python3 module - patroni[etcd]
+    become: true
+    command: python3 -m pip install patroni[etcd]
     when: ansible_os_family == "RedHat"
 
   - name: Install patroni debian
@@ -244,6 +248,28 @@
       state: latest
       update_cache: yes
     when: ansible_os_family == "RedHat"
+
+  - name: Install percona-pgpool RHEL
+    yum:
+      name: "{{ packages }}"
+      state: latest
+      update_cache: yes
+    vars:
+      packages:
+        - percona-pgpool-II-pg13
+        - percona-pgpool-II-pg13-extensions
+    when: ansible_os_family == "RedHat"
+
+  - name: Install percona-pgpool Debian
+    apt:
+      name: "{{ packages }}"
+      state: latest
+      update_cache: yes
+    vars:
+      packages:
+        - percona-pgpool2
+        - libpgpool2
+    when: ansible_os_family == "Debian"
 
   - name: Install percona-wal2json13 Debian
     apt:
@@ -531,6 +557,20 @@
 
   - name: Start haproxy
     shell: haproxy -f  /etc/haproxy/haproxy.cfg -D
+
+  - name: Start pgpool service
+    service:
+      name: pgpool
+      state: started
+      enabled: yes
+    when: ansible_os_family == "RedHat"
+
+  - name: Start pgpool service
+    service:
+      name: percona-pgpool2
+      state: started
+      enabled: yes
+    when: ansible_os_family == "Debian"
 
   - name: Add user postgres to sudoers
     user:
