Following changes are done for ppg-12.14 packges. 1. Update versions for PPG 12.14 release. 2. Due to package name change, renamed python3-python-etcd to python3-etcd on RHEL. 3. Added product pgpool to distribution. 4. For RHEL8, Enable powertools repo and add mirrors that will work for dnf,yum. 5. Install python3 module patroni[etcd] to fix the patroni service failure. 6. Add PG_TEST_PORT_DIR env variable to PGSM. 7. Removed unrequired python module installation in ppg_meta_server. 8. Install perl modules, CPAN, CPANM and Text::Trim. 9. Set PG_TEST_PORT_DIR dir env variable in python tests file. 10. Change instance_type from t2.micro to t2.medium for PGSM where testcases where fails to allocate memory. 11. Set export LANG=C.UTF-8 for PGSM. 12. Enabling PGSM regression on Centos8 instead of Centos7. 13. Changed instance type for ppg-12 jobs from t2.micro to t2.small.

--- a/tasks/install_ppg12_tools.yml
+++ b/tasks/install_ppg12_tools.yml
@@ -169,6 +169,11 @@
       allow_downgrade: yes
     when: ansible_os_family == "RedHat"
 
+  - name: Install python3 module - patroni[etcd]
+    become: true
+    command: python3 -m pip install patroni[etcd]
+    when: ansible_os_family == "RedHat"
+
   - name: Install patroni debian
     apt:
       name: "{{ packages }}"
@@ -253,6 +258,28 @@
       packages:
         - percona-pgbouncer
         - percona-pgbouncer-dbgsym
+    when: ansible_os_family == "Debian"
+
+  - name: Install percona-pgpool RHEL
+    yum:
+      name: "{{ packages }}"
+      state: latest
+      update_cache: yes
+    vars:
+      packages:
+        - percona-pgpool-II-pg12
+        - percona-pgpool-II-pg12-extensions
+    when: ansible_os_family == "RedHat"
+
+  - name: Install percona-pgpool Debian
+    apt:
+      name: "{{ packages }}"
+      state: latest
+      update_cache: yes
+    vars:
+      packages:
+        - percona-pgpool2
+        - libpgpool2
     when: ansible_os_family == "Debian"
 
   - name: Install percona-wal2json12 RHEL
@@ -554,6 +581,27 @@
 
   - name: Start haproxy
     shell: haproxy -f  /etc/haproxy/haproxy.cfg -D
+
+  - name: Start pgpool service
+    service:
+      name: pgpool
+      state: started
+      enabled: yes
+    when: ansible_os_family == "RedHat"
+
+  - name: Start pgpool service
+    service:
+      name: percona-pgpool2
+      state: started
+      enabled: yes
+    when: ansible_os_family == "Debian"
+
+  - name: Add user postgres to sudoers
+    user:
+      name: postgres
+      groups: sudo
+      append: yes
+    when: ansible_os_family == "Debian"
 
   - name: Pause for 1 minutes
     ansible.builtin.pause:
