--- a/pg_stat_monitor/ppg-12/molecule/default/molecule.yml
+++ b/pg_stat_monitor/ppg-12/molecule/default/molecule.yml
@@ -4,11 +4,11 @@ dependency:
 driver:
   name: ec2
 platforms:
-  - name: pgstatmon-centos7-${BUILD_NUMBER}
+  - name: pgstatmon-centos8-${BUILD_NUMBER}
     region: eu-central-1
-    image: ami-095e1a4d3d632d215
+    image: ami-0e337c7f9752d9d34
     vpc_subnet_id: subnet-085deaca8c1c59a4f
-    instance_type: t2.micro
+    instance_type: t2.medium
     ssh_user: centos
     root_device_name: /dev/sda1
     instance_tags:
@@ -22,8 +22,6 @@ provisioner:
     prepare: ../../../../playbooks/prepare.yml
     converge: ../../playbooks/playbook.yml
     verify: ../../playbooks/verify.yml
-#verifier:
-#  name: ansible
 verifier:
   name: testinfra
   directory: ../../../tests/
