Following changes are done for ppg-11.19 packges. 1. Update versions for PPG 11.19 release. 2. Due to package name change, renamed python3-python-etcd to python3-etcd on RHEL. 3. Added product pgpool to distribution. 4. For RHEL8, Enable powertools repo and add mirrors that will work for dnf,yum. 5. Install python3 module patroni[etcd] to fix the patroni service failure. 6. Add PG_TEST_PORT_DIR env variable to PGSM. 7. Removed unrequired python module installation in ppg_meta_server. 8. Install perl modules, CPAN, CPANM and Text::Trim. 9. Set PG_TEST_PORT_DIR dir env variable in python tests file. 10. Change instance_type from t2.micro to t2.medium for PGSM where testcases where fails to allocate memory. 11. Set export LANG=C.UTF-8 for PGSM. 12. Enabling PGSM regression on Centos8 instead of Centos7. 13. Changed instance type for ppg-11 jobs from t2.micro to t2.small.

--- a/ppg/pg-11/molecule/debian-10/molecule.yml
+++ b/ppg/pg-11/molecule/debian-10/molecule.yml
@@ -8,7 +8,7 @@ platforms:
     region: eu-central-1
     image: ami-0f41e297b3c53fab8
     vpc_subnet_id: subnet-085deaca8c1c59a4f
-    instance_type: t2.micro
+    instance_type: t2.small
     ssh_user: admin
     root_device_name: /dev/xvda
     instance_tags:
@@ -30,6 +30,7 @@ verifier:
     s: true
     junitxml: report.xml
 scenario:
+  name: debian-10
   destroy_sequence:
     - destroy
   cleanup_sequence:
@@ -40,5 +41,4 @@ scenario:
     - prepare
     - converge
     - verify
-    - cleanup
     - destroy
