--- a/tasks/install_ppg11_tools.yml
+++ b/tasks/install_ppg11_tools.yml
@@ -110,7 +110,7 @@
       allow_downgrade: yes
     when: ansible_os_family == "RedHat"
 
-  - name: Install percona-pgaudit12_set_user Debian
+  - name: Install percona-pgaudit11_set_user Debian
     apt:
       name: "{{ packages }}"
       state: latest
@@ -120,7 +120,6 @@
         - percona-pgaudit11-set-user
         - percona-pgaudit11-set-user-dbgsym
     when: ansible_os_family == "Debian"
-
 
   - name: Install percona-pgbouncer RHEL
     yum:
@@ -141,7 +140,29 @@
         - percona-pgbouncer-dbgsym
     when: ansible_os_family == "Debian"
 
-  - name: Install percona-wal2json12 RHEL
+  - name: Install percona-pgpool RHEL
+    yum:
+      name: "{{ packages }}"
+      state: latest
+      update_cache: yes
+    vars:
+      packages:
+        - percona-pgpool-II-pg11
+        - percona-pgpool-II-pg11-extensions
+    when: ansible_os_family == "RedHat"
+
+  - name: Install percona-pgpool Debian
+    apt:
+      name: "{{ packages }}"
+      state: latest
+      update_cache: yes
+    vars:
+      packages:
+        - percona-pgpool2
+        - libpgpool2
+    when: ansible_os_family == "Debian"
+
+  - name: Install percona-wal2json11 RHEL
     yum:
       name: percona-wal2json11
       state: latest
@@ -293,6 +314,11 @@
       state: latest
       update_cache: yes
       allow_downgrade: yes
+    when: ansible_os_family == "RedHat"
+
+  - name: Install python3 module - patroni[etcd]
+    become: true
+    command: python3 -m pip install patroni[etcd]
     when: ansible_os_family == "RedHat"
 
   - name: Install patroni debian
@@ -577,6 +603,27 @@
 
   - name: Start haproxy
     shell: haproxy -f  /etc/haproxy/haproxy.cfg -D
+
+  - name: Start pgpool service
+    service:
+      name: pgpool
+      state: started
+      enabled: yes
+    when: ansible_os_family == "RedHat"
+
+  - name: Start pgpool service
+    service:
+      name: percona-pgpool2
+      state: started
+      enabled: yes
+    when: ansible_os_family == "Debian"
+
+  - name: Add user postgres to sudoers
+    user:
+      name: postgres
+      groups: sudo
+      append: yes
+    when: ansible_os_family == "Debian"
 
   - name: Pause for 1 minutes
     ansible.builtin.pause:
