--- a/ppg/pg-11-setup/molecule/debian-10/molecule.yml
+++ b/ppg/pg-11-setup/molecule/debian-10/molecule.yml
@@ -30,6 +30,7 @@ verifier:
     s: true
     junitxml: report.xml
 scenario:
+  name: debian-10
   destroy_sequence:
     - destroy
   cleanup_sequence:
@@ -40,5 +41,4 @@ scenario:
     - prepare
     - converge
     - verify
-    - cleanup
     - destroy
