--- a/ppg/pg-11/molecule/centos8/molecule.yml
+++ b/ppg/pg-11/molecule/centos8/molecule.yml
@@ -8,7 +8,7 @@ platforms:
     region: eu-central-1
     image: ami-0e337c7f9752d9d34
     vpc_subnet_id: subnet-085deaca8c1c59a4f
-    instance_type: t2.micro
+    instance_type: t2.small
     ssh_user: centos
     root_device_name: /dev/sda1
     instance_tags:
