--- a/pgbouncer/ppg-14/tasks/main.yml
+++ b/pgbouncer/ppg-14/tasks/main.yml
@@ -30,6 +30,11 @@
     - percona-postgresql14-server
     - percona-postgresql14-test
 
+- name: Initialize Postgres RHEL
+  command: /usr/pgsql-14/bin/postgresql-14-setup initdb
+  environment:
+    PATH: /usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin
+
 - name: Setup additional yum packages
   yum:
     name: "{{ packages }}"
@@ -110,6 +115,18 @@
 
 - name: Make pgbouncer
   shell: make
+  args:
+    chdir: /var/lib/pgsql/pgbouncer
+  become_user: postgres
+
+- name: Delete test_password_server test case
+  shell: sed -i '/^test_password_server$/d' test/test.sh
+  args:
+    chdir: /var/lib/pgsql/pgbouncer
+  become_user: postgres
+
+- name: Delete test_password_client test case
+  shell: sed -i '/^test_password_client$/d' test/test.sh
   args:
     chdir: /var/lib/pgsql/pgbouncer
   become_user: postgres
