--- a/tasks/install_ppg13.yml
+++ b/tasks/install_ppg13.yml
@@ -10,44 +10,28 @@
     command: dnf clean all -y
     when: ansible_os_family == "RedHat" and ansible_distribution_major_version == "8"
 
-  - name: Enable powertools RHEL8
+  - name: Clean dnf oracle linux
     become: true
-    command: dnf config-manager --set-enabled powertools
-    when: ansible_os_family == "RedHat" and ansible_distribution_major_version == "8"
+    command: dnf clean all -y
+    when: ansible_os_family == "RedHat" and
+      (ansible_distribution_major_version == "8" or ansible_distribution_major_version == "9")
 
-  - name: Find all of the files inside /etc/yum.repos.d directory
-    find:
-      paths: "/etc/yum.repos.d/"
-      patterns: "*.repo"
-    register: repos
-
-  - name: Comment 'mirrorlist' in /etc/yum.repos.d/*.repo files
-    replace:
-      path: "{{ item.path }}"
-      regexp: 'mirrorlist'
-      replace: '#mirrorlist'
-    with_items: "{{ repos.files }}"
-    when: ansible_os_family == "RedHat" and ansible_distribution_major_version == "8"
-
-  - name: Replace 'baseurl' in /etc/yum.repos.d/*.repo files
-    replace:
-      path: "{{ item.path }}"
-      regexp: '#baseurl=http://mirror.centos.org'
-      replace: 'baseurl=http://vault.centos.org'
-    with_items: "{{ repos.files }}"
-    when: ansible_os_family == "RedHat" and ansible_distribution_major_version == "8"
-
-  - name: Update dnf RHEL8
+  - name: Enable powertools on oracle linux 8
     become: true
-    command: dnf update -y
+    command: dnf config-manager --set-enabled ol8_codeready_builder
     when: ansible_os_family == "RedHat" and ansible_distribution_major_version == "8"
 
-  - name: Disable dnf module for RHEL8
+  - name: Enable powertools on oracle linux 9
+    become: true
+    command: dnf config-manager --set-enabled ol9_codeready_builder
+    when: ansible_os_family == "RedHat" and ansible_distribution_major_version == "9"
+
+  - name: Disable postgresql module for RHEL8
     become: true
     command: dnf module disable postgresql -y
     when: ansible_os_family == "RedHat" and ansible_distribution_major_version == "8"
 
-  - name: Disable llvm-toolset dnf module for RHEL8
+  - name: Disable llvm-toolset for RHEL8
     become: true
     command: dnf module disable llvm-toolset -y
     when: ansible_os_family == "RedHat" and ansible_distribution_major_version == "8"
@@ -79,18 +63,6 @@
       - percona-postgresql-plpython3-13-dbgsym
       - percona-postgresql-pltcl-13-dbgsym
     when: ansible_os_family == "Debian"
-
-  - name: install Percona Platform for PostgreSQL deb packages
-    apt:
-      name: "{{ packages }}"
-      update_cache: yes
-      state: latest
-    vars:
-      packages:
-      - percona-postgresql-plpython3-13
-      - percona-postgresql-plpython3-13-dbgsym
-    when:
-      - ansible_os_family == "Debian"
 
   - name: install Percona Platform for PostgreSQL rpm packages for RHEL
     yum:
@@ -148,4 +120,5 @@
         - percona-postgresql13-pltcl-debuginfo
         - percona-postgresql13-plpython3-debuginfo
         - percona-postgresql13-server-debuginfo
-    when: ansible_os_family == "RedHat" and ansible_distribution_major_version == "8"
+    when: ansible_os_family == "RedHat" and
+      (ansible_distribution_major_version == "8" or ansible_distribution_major_version == "9")
