Follwoing tasks are done in this commit.
1. Fixed bug where minor version 11 for any ppg release could be considered as major release version 11.
2. Updated version and settings for ppg-13.11.
3. Fixed ppg11,12,13,14 minor updates failure.

--- a/ppg/pg-11-minor-upgrade/molecule/centos-7/molecule.yml
+++ b/ppg/pg-11-minor-upgrade/molecule/centos-7/molecule.yml
@@ -1,4 +1,6 @@
 ---
+dependency:
+  name: galaxy
 driver:
   name: ec2
 platforms:
@@ -6,7 +8,7 @@ platforms:
     region: eu-central-1
     image: ami-04cf43aca3e6f3de3
     vpc_subnet_id: subnet-085deaca8c1c59a4f
-    instance_type: t2.micro
+    instance_type: t2.small
     ssh_user: centos
     root_device_name: /dev/sda1
     instance_tags:
@@ -30,13 +32,10 @@ verifier:
 scenario:
   destroy_sequence:
     - destroy
-  cleanup_sequence:
-    - cleanup
   test_sequence:
     - destroy
     - create
     - prepare
     - converge
     - verify
-    - cleanup
     - destroy
