--- a/ppg/pg-11-minor-upgrade/molecule/ol-9/molecule.yml
+++ b/ppg/pg-11-minor-upgrade/molecule/ol-9/molecule.yml
@@ -1,13 +1,15 @@
 ---
+dependency:
+  name: galaxy
 driver:
   name: ec2
 platforms:
-  - name: centos8-${BUILD_NUMBER}-${JOB_NAME}
+  - name: ol9-${BUILD_NUMBER}-${JOB_NAME}
     region: eu-central-1
-    image: ami-0e337c7f9752d9d34
+    image: ami-02952e732e6126584
     vpc_subnet_id: subnet-085deaca8c1c59a4f
-    instance_type: t2.micro
-    ssh_user: centos
+    instance_type: t2.small
+    ssh_user: ec2-user
     root_device_name: /dev/sda1
     instance_tags:
       iit-billing-tag: jenkins-pg-worker
@@ -30,13 +32,10 @@ verifier:
 scenario:
   destroy_sequence:
     - destroy
-  cleanup_sequence:
-    - cleanup
   test_sequence:
     - destroy
     - create
     - prepare
     - converge
     - verify
-    - cleanup
     - destroy
