--- a/ppg/pg-12-minor-upgrade/molecule/ubuntu-bionic/molecule.yml
+++ b/ppg/pg-12-minor-upgrade/molecule/ubuntu-bionic/molecule.yml
@@ -8,7 +8,7 @@ platforms:
     region: eu-central-1
     image: ami-0a8561d8c5a4f098a
     vpc_subnet_id: subnet-085deaca8c1c59a4f
-    instance_type: t2.micro
+    instance_type: t2.small
     ssh_user: ubuntu
     root_device_name: /dev/sda1
     instance_tags:
@@ -32,13 +32,10 @@ verifier:
 scenario:
   destroy_sequence:
     - destroy
-  cleanup_sequence:
-    - cleanup
   test_sequence:
     - destroy
     - create
     - prepare
     - converge
     - verify
-    - cleanup
     - destroy
