--- a/ppg/pg-13-minor-upgrade/molecule/debian-10/molecule.yml
+++ b/ppg/pg-13-minor-upgrade/molecule/debian-10/molecule.yml
@@ -8,7 +8,7 @@ platforms:
     region: eu-central-1
     image: ami-0f41e297b3c53fab8
     vpc_subnet_id: subnet-085deaca8c1c59a4f
-    instance_type: t2.micro
+    instance_type: t2.small
     ssh_user: admin
     root_device_name: /dev/xvda
     instance_tags:
@@ -21,7 +21,6 @@ provisioner:
     destroy: ../../../../playbooks/destroy.yml
     prepare: ../../../../playbooks/prepare.yml
     converge: ../../playbooks/playbook.yml
-    cleanup: ../../playbooks/cleanup.yml
 verifier:
   name: testinfra
   directory: ../../../tests/tests_ppg/
@@ -33,13 +32,10 @@ verifier:
 scenario:
   destroy_sequence:
     - destroy
-  cleanup_sequence:
-    - cleanup
   test_sequence:
     - destroy
     - create
     - prepare
     - converge
     - verify
-    - cleanup
     - destroy
